--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -1,12 +1,14 @@
 services:
   bot:
-    image: ghcr.io/epava1516/pybot-ruleta:latest
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: roulette_bot_telegram
     env_file: .env
     expose:
       - "8080"
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:${WEB_PORT:-8080}/health || exit 1"]
+      test: ["CMD-SHELL", "if [ \"$${MODE:-polling}\" != \"webhook\" ]; then exit 0; fi; wget -qO- http://127.0.0.1:$${WEB_PORT:-8080}/health || exit 1"]
       interval: 20s
       timeout: 3s
       retries: 5
@@ -64,7 +66,6 @@ services:
       apk add --no-cache inotify-tools docker-cli
       mkdir -p /etc/letsencrypt/live
       echo "[reloader] watching /etc/letsencrypt/live ..."
-      # bucle infinito; aunque inotify falle, reintenta
       while true; do
         inotifywait -r -e close_write,create,delete,move /etc/letsencrypt/live >/dev/null 2>&1 || true
         echo "[reloader] change detected -> nginx reload"
